tests/fixtures/reveal_type.rb
def reveal => nil
  x = [1, "hello"]
  reveal_type(x)
  reveal_type
  nil
end
